--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>Awesome Books</h1>
-    <ul id="awesomeBooks">
-      
-    </ul>
-
+    <ul id="awesomeBooks"></ul>
+    <small id="error"></small>
     <form action="">
         <input type="text" name="title" id="title" placeholder="Title">
         <br>
@@ -19,7 +17,8 @@
         <input type="text" name="author" id="author" placeholder="Author">
         <br>
         <br>
-        <button type="submit">Add</button>
+        <button type="submit" id="submit">Add</button>
+        <!-- <small class="erro"></small> -->
     </form>
     <script src="./script.js"></script>
 </body>
