Add script file for navigation

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <div class="logo"><a href="#">Awesome Books</a></div>
         <ul>
             <li class="nav-link" id="list">List</li>
-            <li class="nav-link" id="Add_new">Add new</li>
+            <li class="nav-link" id="add-new">Add new</li>
             <li class="nav-link" id="contact-page">Contact</li>
         </ul>
     </header>
     <p class="date"></p>
     <main id="main">
-        <section class="list  section">
+        <section class="list  section" id="listpage">
             <h1 class="title">All awesome Books</h1>
             <ul id="awesomeBooks"></ul>
         </section>
-        <section class="form-section add-new hiden section">
+        <section class="form-section add-new hiden section" id="addpage">
                 <form action="">
                     <h2>Add a new book</h2>
                     <small id="error"></small>
@@ -37,7 +37,7 @@
                     </div>
                 </form>
         </section>
-        <section class="contact section hiden">
+        <section class="contact section hiden " id="contactpage">
             <h2>Contact information</h2>
             <p>Do You have any question or you just want to say hello</p>
             <p>You can reach out to us !</p>
