--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <title>Awesome book</title>
 </head>
 <body>
-    <h1>Awesome Books</h1>
+    <h1 class="title">Awesome Books</h1>
     <ul id="awesomeBooks"></ul>
-    <small id="error"></small>
-    <form action="">
-        <input type="text" name="title" id="title" placeholder="Title">
-        <br>
-        <br>
-        <input type="text" name="author" id="author" placeholder="Author">
-        <br>
-        <br>
-        <button type="submit" id="submit">Add</button>
-    </form>
+    <hr>
+    <div class="form-section">
+            <form action="">
+                <h2>Add a new book</h2>
+                <small id="error"></small>
+                <input type="text" name="title" id="title" placeholder="Title">
+                <br>
+                <br>
+                <input type="text" name="author" id="author" placeholder="Author">
+                <br>
+                <br>
+                <div class="form-btn">
+                    <button type="submit" id="submit">Add</button>
+                </div>
+            </form>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
